js/lib/grammar/generated/ThymeParser.js
// Generated from Thyme.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('lib/antlr4/index');
var ThymeListener = require('./ThymeListener').ThymeListener;
var ThymeVisitor = require('./ThymeVisitor').ThymeVisitor;

var grammarFileName = "Thyme.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "';'", "'('", "')'", "'?'", "'{'", "'}'", "':'", 
                     "','", "'-'", "'!'", "'*'", "'/'", "'%'", "'^'", "'+'", 
                     "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'&&'", 
                     "'||'", "'.'", "'['", "']'", null, "'null'", "'true'", 
                     "'false'", null, null, null, "'=>'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      "INFINITY_LITERAL", "NULL_LITERAL", "BOOL_TRUE", "BOOL_FALSE", 
                      "NUMBER_LITERAL", "STRING_LITERAL", "IDENTIFIER", 
                      "ARROW", "ASSIGN", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "WS" ];

var ruleNames =  [ "script", "statement", "statementList", "ifStatement", 
                   "assignStatement", "expressionList", "expression", "term", 
                   "listLiteral", "parenthesysExpression", "singleExpression", 
                   "memberAccessor", "functionCallStatement", "functionLiteral" ];

function ThymeParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

ThymeParser.prototype = Object.create(antlr4.Parser.prototype);
ThymeParser.prototype.constructor = ThymeParser;

Object.defineProperty(ThymeParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

ThymeParser.EOF = antlr4.Token.EOF;
ThymeParser.T__0 = 1;
ThymeParser.T__1 = 2;
ThymeParser.T__2 = 3;
ThymeParser.T__3 = 4;
ThymeParser.T__4 = 5;
ThymeParser.T__5 = 6;
ThymeParser.T__6 = 7;
ThymeParser.T__7 = 8;
ThymeParser.T__8 = 9;
ThymeParser.T__9 = 10;
ThymeParser.T__10 = 11;
ThymeParser.T__11 = 12;
ThymeParser.T__12 = 13;
ThymeParser.T__13 = 14;
ThymeParser.T__14 = 15;
ThymeParser.T__15 = 16;
ThymeParser.T__16 = 17;
ThymeParser.T__17 = 18;
ThymeParser.T__18 = 19;
ThymeParser.T__19 = 20;
ThymeParser.T__20 = 21;
ThymeParser.T__21 = 22;
ThymeParser.T__22 = 23;
ThymeParser.T__23 = 24;
ThymeParser.T__24 = 25;
ThymeParser.T__25 = 26;
ThymeParser.INFINITY_LITERAL = 27;
ThymeParser.NULL_LITERAL = 28;
ThymeParser.BOOL_TRUE = 29;
ThymeParser.BOOL_FALSE = 30;
ThymeParser.NUMBER_LITERAL = 31;
ThymeParser.STRING_LITERAL = 32;
ThymeParser.IDENTIFIER = 33;
ThymeParser.ARROW = 34;
ThymeParser.ASSIGN = 35;
ThymeParser.BLOCK_COMMENT = 36;
ThymeParser.LINE_COMMENT = 37;
ThymeParser.WS = 38;

ThymeParser.RULE_script = 0;
ThymeParser.RULE_statement = 1;
ThymeParser.RULE_statementList = 2;
ThymeParser.RULE_ifStatement = 3;
ThymeParser.RULE_assignStatement = 4;
ThymeParser.RULE_expressionList = 5;
ThymeParser.RULE_expression = 6;
ThymeParser.RULE_term = 7;
ThymeParser.RULE_listLiteral = 8;
ThymeParser.RULE_parenthesysExpression = 9;
ThymeParser.RULE_singleExpression = 10;
ThymeParser.RULE_memberAccessor = 11;
ThymeParser.RULE_functionCallStatement = 12;
ThymeParser.RULE_functionLiteral = 13;


function ScriptContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ThymeParser.RULE_script;
    return this;
}

ScriptContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ScriptContext.prototype.constructor = ScriptContext;

ScriptContext.prototype.EOF = function() {
    return this.getToken(ThymeParser.EOF, 0);
};

ScriptContext.prototype.assignStatement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AssignStatementContext);
    } else {
        return this.getTypedRuleContext(AssignStatementContext,i);
    }
};

ScriptContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterScript(this);
	}
};

ScriptContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitScript(this);
	}
};

ScriptContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitScript(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ThymeParser.ScriptContext = ScriptContext;

ThymeParser.prototype.script = function() {

    var localctx = new ScriptContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, ThymeParser.RULE_script);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 31; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 28;
            this.assignStatement();
            this.state = 29;
            this.match(ThymeParser.T__0);
            this.state = 33; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(((((_la - 2)) & ~0x1f) == 0 && ((1 << (_la - 2)) & ((1 << (ThymeParser.T__1 - 2)) | (1 << (ThymeParser.T__4 - 2)) | (1 << (ThymeParser.T__8 - 2)) | (1 << (ThymeParser.T__9 - 2)) | (1 << (ThymeParser.T__24 - 2)) | (1 << (ThymeParser.INFINITY_LITERAL - 2)) | (1 << (ThymeParser.NULL_LITERAL - 2)) | (1 << (ThymeParser.BOOL_TRUE - 2)) | (1 << (ThymeParser.BOOL_FALSE - 2)) | (1 << (ThymeParser.NUMBER_LITERAL - 2)) | (1 << (ThymeParser.STRING_LITERAL - 2)) | (1 << (ThymeParser.IDENTIFIER - 2)))) !== 0));
        this.state = 35;
        this.match(ThymeParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ThymeParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.assignStatement = function() {
    return this.getTypedRuleContext(AssignStatementContext,0);
};

StatementContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};

StatementContext.prototype.functionCallStatement = function() {
    return this.getTypedRuleContext(FunctionCallStatementContext,0);
};

StatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitStatement(this);
	}
};

StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ThymeParser.StatementContext = StatementContext;

ThymeParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, ThymeParser.RULE_statement);
    try {
        this.state = 49;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 37;
            this.assignStatement();
            this.state = 38;
            this.match(ThymeParser.T__0);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 40;
            this.ifStatement();
            this.state = 41;
            this.match(ThymeParser.T__0);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 43;
            this.functionCallStatement();
            this.state = 44;
            this.match(ThymeParser.T__0);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 46;
            this.expression(0);
            this.state = 47;
            this.match(ThymeParser.T__0);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ThymeParser.RULE_statementList;
    return this;
}

StatementListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementListContext.prototype.constructor = StatementListContext;

StatementListContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

StatementListContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterStatementList(this);
	}
};

StatementListContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitStatementList(this);
	}
};

StatementListContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitStatementList(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ThymeParser.StatementListContext = StatementListContext;

ThymeParser.prototype.statementList = function() {

    var localctx = new StatementListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, ThymeParser.RULE_statementList);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 54;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 2)) & ~0x1f) == 0 && ((1 << (_la - 2)) & ((1 << (ThymeParser.T__1 - 2)) | (1 << (ThymeParser.T__4 - 2)) | (1 << (ThymeParser.T__8 - 2)) | (1 << (ThymeParser.T__9 - 2)) | (1 << (ThymeParser.T__24 - 2)) | (1 << (ThymeParser.INFINITY_LITERAL - 2)) | (1 << (ThymeParser.NULL_LITERAL - 2)) | (1 << (ThymeParser.BOOL_TRUE - 2)) | (1 << (ThymeParser.BOOL_FALSE - 2)) | (1 << (ThymeParser.NUMBER_LITERAL - 2)) | (1 << (ThymeParser.STRING_LITERAL - 2)) | (1 << (ThymeParser.IDENTIFIER - 2)))) !== 0)) {
            this.state = 51;
            this.statement();
            this.state = 56;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function IfStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ThymeParser.RULE_ifStatement;
    return this;
}

IfStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IfStatementContext.prototype.constructor = IfStatementContext;

IfStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

IfStatementContext.prototype.statementList = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementListContext);
    } else {
        return this.getTypedRuleContext(StatementListContext,i);
    }
};

IfStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterIfStatement(this);
	}
};

IfStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitIfStatement(this);
	}
};

IfStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitIfStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ThymeParser.IfStatementContext = IfStatementContext;

ThymeParser.prototype.ifStatement = function() {

    var localctx = new IfStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, ThymeParser.RULE_ifStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 57;
        this.match(ThymeParser.T__1);
        this.state = 58;
        this.expression(0);
        this.state = 59;
        this.match(ThymeParser.T__2);
        this.state = 60;
        this.match(ThymeParser.T__3);
        this.state = 61;
        this.match(ThymeParser.T__4);
        this.state = 62;
        this.statementList();
        this.state = 63;
        this.match(ThymeParser.T__5);
        this.state = 64;
        this.match(ThymeParser.T__6);
        this.state = 65;
        this.match(ThymeParser.T__4);
        this.state = 66;
        this.statementList();
        this.state = 67;
        this.match(ThymeParser.T__5);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function AssignStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ThymeParser.RULE_assignStatement;
    return this;
}

AssignStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AssignStatementContext.prototype.constructor = AssignStatementContext;

AssignStatementContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

AssignStatementContext.prototype.ASSIGN = function() {
    return this.getToken(ThymeParser.ASSIGN, 0);
};

AssignStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterAssignStatement(this);
	}
};

AssignStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitAssignStatement(this);
	}
};

AssignStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitAssignStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ThymeParser.AssignStatementContext = AssignStatementContext;

ThymeParser.prototype.assignStatement = function() {

    var localctx = new AssignStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, ThymeParser.RULE_assignStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 69;
        this.expression(0);
        this.state = 70;
        this.match(ThymeParser.ASSIGN);
        this.state = 71;
        this.expression(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExpressionListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ThymeParser.RULE_expressionList;
    return this;
}

ExpressionListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionListContext.prototype.constructor = ExpressionListContext;

ExpressionListContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

ExpressionListContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterExpressionList(this);
	}
};

ExpressionListContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitExpressionList(this);
	}
};

ExpressionListContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitExpressionList(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ThymeParser.ExpressionListContext = ExpressionListContext;

ThymeParser.prototype.expressionList = function() {

    var localctx = new ExpressionListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, ThymeParser.RULE_expressionList);
    var _la = 0; // Token type
    try {
        this.state = 82;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case ThymeParser.T__1:
        case ThymeParser.T__4:
        case ThymeParser.T__8:
        case ThymeParser.T__9:
        case ThymeParser.T__24:
        case ThymeParser.INFINITY_LITERAL:
        case ThymeParser.NULL_LITERAL:
        case ThymeParser.BOOL_TRUE:
        case ThymeParser.BOOL_FALSE:
        case ThymeParser.NUMBER_LITERAL:
        case ThymeParser.STRING_LITERAL:
        case ThymeParser.IDENTIFIER:
            this.enterOuterAlt(localctx, 1);
            this.state = 73;
            this.expression(0);
            this.state = 78;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===ThymeParser.T__7) {
                this.state = 74;
                this.match(ThymeParser.T__7);
                this.state = 75;
                this.expression(0);
                this.state = 80;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            break;
        case ThymeParser.T__2:
        case ThymeParser.T__25:
            this.enterOuterAlt(localctx, 2);

            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExpressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ThymeParser.RULE_expression;
    return this;
}

ExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionContext.prototype.constructor = ExpressionContext;


 
ExpressionContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function NegateExpressionContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

NegateExpressionContext.prototype = Object.create(ExpressionContext.prototype);
NegateExpressionContext.prototype.constructor = NegateExpressionContext;

ThymeParser.NegateExpressionContext = NegateExpressionContext;

NegateExpressionContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};
NegateExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterNegateExpression(this);
	}
};

NegateExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitNegateExpression(this);
	}
};

NegateExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitNegateExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function AddSubExpressionContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    this.op = null; // Token;
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AddSubExpressionContext.prototype = Object.create(ExpressionContext.prototype);
AddSubExpressionContext.prototype.constructor = AddSubExpressionContext;

ThymeParser.AddSubExpressionContext = AddSubExpressionContext;

AddSubExpressionContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};
AddSubExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterAddSubExpression(this);
	}
};

AddSubExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitAddSubExpression(this);
	}
};

AddSubExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitAddSubExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function RelationalExpressionContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    this.op = null; // Token;
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

RelationalExpressionContext.prototype = Object.create(ExpressionContext.prototype);
RelationalExpressionContext.prototype.constructor = RelationalExpressionContext;

ThymeParser.RelationalExpressionContext = RelationalExpressionContext;

RelationalExpressionContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};
RelationalExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterRelationalExpression(this);
	}
};

RelationalExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitRelationalExpression(this);
	}
};

RelationalExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitRelationalExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function TernaryExpressionContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

TernaryExpressionContext.prototype = Object.create(ExpressionContext.prototype);
TernaryExpressionContext.prototype.constructor = TernaryExpressionContext;

ThymeParser.TernaryExpressionContext = TernaryExpressionContext;

TernaryExpressionContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};
TernaryExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterTernaryExpression(this);
	}
};

TernaryExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitTernaryExpression(this);
	}
};

TernaryExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitTernaryExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function AndExpressionContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AndExpressionContext.prototype = Object.create(ExpressionContext.prototype);
AndExpressionContext.prototype.constructor = AndExpressionContext;

ThymeParser.AndExpressionContext = AndExpressionContext;

AndExpressionContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};
AndExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterAndExpression(this);
	}
};

AndExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitAndExpression(this);
	}
};

AndExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitAndExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function NotExpressionContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

NotExpressionContext.prototype = Object.create(ExpressionContext.prototype);
NotExpressionContext.prototype.constructor = NotExpressionContext;

ThymeParser.NotExpressionContext = NotExpressionContext;

NotExpressionContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};
NotExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterNotExpression(this);
	}
};

NotExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitNotExpression(this);
	}
};

NotExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitNotExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function AtomExpressionContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AtomExpressionContext.prototype = Object.create(ExpressionContext.prototype);
AtomExpressionContext.prototype.constructor = AtomExpressionContext;

ThymeParser.AtomExpressionContext = AtomExpressionContext;

AtomExpressionContext.prototype.term = function() {
    return this.getTypedRuleContext(TermContext,0);
};
AtomExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterAtomExpression(this);
	}
};

AtomExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitAtomExpression(this);
	}
};

AtomExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitAtomExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function EqualityExpressionContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    this.op = null; // Token;
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

EqualityExpressionContext.prototype = Object.create(ExpressionContext.prototype);
EqualityExpressionContext.prototype.constructor = EqualityExpressionContext;

ThymeParser.EqualityExpressionContext = EqualityExpressionContext;

EqualityExpressionContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};
EqualityExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.enterEqualityExpression(this);
	}
};

EqualityExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ThymeListener ) {
        listener.exitEqualityExpression(this);
	}
};

EqualityExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ThymeVisitor ) {
        return visitor.visitEqualityExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function OrExpressionContext(parser, ctx) {
	ExpressionContext.call(this, parser);
    ExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

OrExpressionContext.prototype = Object.create(ExpressionContext.prototype);
OrExpressionContext.prototype.constructor = OrExpressionContext;

ThymeParser.OrExpressionContext = OrExpressionContext;
